--- a/index.html
+++ b/index.html
@@ -470,9 +470,11 @@ var bar = 'medim string';
       </div>
 
 
-      <div class="step" data-x="20000" data-y="0">
+      <div class="step" data-x="22000" data-y="0">
         <h1>Thank you</h1>
-        <a href=""></a>
+        <a href="https://jbonigomes.github.io/cybertill-presentation">
+          https://jbonigomes.github.io/cybertill-presentation
+        </a>
       </div>
     </div>
 
