--- a/index.html
+++ b/index.html
@@ -27,12 +27,6 @@
 
 
       <div class="step" data-x="2000" data-y="0">
-        <h1>JS - Learn once, apply everywhere</h1>
-        <p>Ionic, NativeScript, Electron, Node.js</p>
-      </div>
-
-
-      <div class="step" data-x="4000" data-y="0">
         <h1>JS Coding standards</h1>
 
         <ul>
@@ -47,7 +41,7 @@
           <li>Aquire an OCD</li>
         </ul>
       </div>
-      <div class="step" data-x="4000" data-y="1000">
+      <div class="step" data-x="2000" data-y="1000">
         <h1>Code hygiene tools</h1>
         <ul>
           <li>Use a linter</li>
@@ -55,7 +49,7 @@
           <li>Editor Config</li>
         </ul>
       </div>
-      <div class="step" data-x="4000" data-y="2000">
+      <div class="step" data-x="2000" data-y="2000">
         <h1>Code hygiene practices</h1>
         <ul>
           <li>TDD</li>
@@ -66,7 +60,7 @@
           <li>Referencial transparency</li>
         </ul>
       </div>
-      <div class="step" data-x="4000" data-y="3000">
+      <div class="step" data-x="2000" data-y="3000">
         <h1>Code hygiene OCD</h1>
         <ul>
           <li>Short</li>
@@ -75,7 +69,7 @@
           <li>Challenge conventions</li>
         </ul>
       </div>
-      <div class="step" data-x="4000" data-y="4000">
+      <div class="step" data-x="2000" data-y="4000">
         <div class="wrap">
           <div class="left">
             <h1>Do</h1>
@@ -101,7 +95,7 @@ function myFunc() {
           </div>
         </div>
       </div>
-      <div class="step" data-x="4000" data-y="5000">
+      <div class="step" data-x="2000" data-y="5000">
         <div class="wrap">
           <div class="left">
             <h1>Do</h1>
@@ -143,7 +137,7 @@ function myFunc(input) {
           </div>
         </div>
       </div>
-      <div class="step" data-x="4000" data-y="6000">
+      <div class="step" data-x="2000" data-y="6000">
         <div class="wrap">
           <div class="left">
             <h1>Do</h1>
@@ -170,7 +164,7 @@ console.log(myStr1 +  myStr2);
           </div>
         </div>
       </div>
-      <div class="step" data-x="4000" data-y="7000">
+      <div class="step" data-x="2000" data-y="7000">
         <div class="wrap">
           <div class="left">
             <h1>Do</h1>
@@ -195,7 +189,7 @@ function tricky() {
           </div>
         </div>
       </div>
-      <div class="step" data-x="4000" data-y="8000">
+      <div class="step" data-x="2000" data-y="8000">
         <div class="wrap">
           <div class="left">
             <h1>Do</h1>
@@ -226,34 +220,15 @@ var bar = 'medim string';
       </div>
 
 
-      <div class="step" data-x="6000" data-y="0">
-        <h1>Write less code</h1>
-        <ul>
-          <li>more manageable</li>
-          <li>predictable</li>
-          <li>less bugs</li>
-        </ul>
-      </div>
-      <div class="step" data-x="6000" data-y="1000">
-        <h1>Delegate</h1>
-        <ul>
-          <li>Frameworks</li>
-          <li>Services</li>
-          <li>Packages</li>
-          <li>Practices</li>
-        </ul>
-      </div>
-
-
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-1"><span>Aug<br>08</span></div>
         <img class="full" src="img/timeline.png">
-        <p>Retail store first commit: <b>trunk - mainline dev</b></p>
+        <p>Retail store first commit: 'trunk - mainline dev'</p>
         <img class="small" src="img/retail-store.png">
       </div>
 
 
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-2"><span>Nov<br>08</span></div>
         <img class="full" src="img/timeline.png">
         <p>Jekyll initial release</p>
@@ -261,7 +236,7 @@ var bar = 'medim string';
       </div>
 
 
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-3"><span>Mar<br>09</span></div>
         <img class="full" src="img/timeline.png">
         <p>Apache Cordova is created</p>
@@ -269,7 +244,7 @@ var bar = 'medim string';
       </div>
 
 
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-4"><span>May<br>09</span></div>
         <img class="full" src="img/timeline.png">
         <p>Node.js is released</p>
@@ -277,7 +252,7 @@ var bar = 'medim string';
       </div>
 
 
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-5"><span>Jun<br>10</span></div>
         <img class="full" src="img/timeline.png">
         <p>Stripe received seed funding from Y Combinator</p>
@@ -285,7 +260,7 @@ var bar = 'medim string';
       </div>
 
 
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-6"><span>Oct<br>10</span></div>
         <img class="full" src="img/timeline.png">
         <p>Angular.js is released</p>
@@ -293,15 +268,19 @@ var bar = 'medim string';
       </div>
 
 
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-7"><span>Feb<br>11</span></div>
         <img class="full" src="img/timeline.png">
         <p>Intercom is founded</p>
         <img class="small" src="img/intercom.png">
       </div>
+      <div class="step" data-x="4000" data-y="1000">
+        <h1>More than a messaging integration</h1>
+        <img class="full" src="img/intercom-full.png">
+      </div>
 
 
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-8"><span>Sep<br>11</span></div>
         <img class="full" src="img/timeline.png">
         <p>Firebase initial release</p>
@@ -309,7 +288,7 @@ var bar = 'medim string';
       </div>
 
 
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-9"><span>Aug<br>12</span></div>
         <img class="full" src="img/timeline.png">
         <p>Zapier initial release</p>
@@ -317,7 +296,7 @@ var bar = 'medim string';
       </div>
 
 
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-10"><span>Jul<br>13</span></div>
         <img class="full" src="img/timeline.png">
         <p>Electron is released</p>
@@ -325,15 +304,19 @@ var bar = 'medim string';
       </div>
 
 
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-11"><span>Sep<br>13</span></div>
         <img class="full" src="img/timeline.png">
         <p>Snipcart initial release</p>
         <img class="small" src="img/snipcart.jpg">
       </div>
+      <div class="step timeline" data-x="4000" data-y="2000">
+        <h1>How it works</h1>
+        <img src="img/snipcart-code.png">
+      </div>
 
 
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-12"><span>Jun<br>14</span></div>
         <img class="full" src="img/timeline.png">
         <p>Google announces Material Design</p>
@@ -341,7 +324,7 @@ var bar = 'medim string';
       </div>
 
 
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-13"><span>Oct<br>14</span></div>
         <img class="full" src="img/timeline.png">
         <p>HTML5 was released as a W3C Recommendation</p>
@@ -349,23 +332,31 @@ var bar = 'medim string';
       </div>
 
 
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-14"><span>Dec<br>14</span></div>
         <img class="full" src="img/timeline.png">
         <p>Formspree initial commit</p>
         <img class="small" src="img/formspree.png">
       </div>
+      <div class="step timeline" data-x="4000" data-y="4000">
+        <h1>How it works</h1>
+        <img src="img/formspree-full.png">
+      </div>
 
 
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-15"><span>Feb<br>15</span></div>
         <img class="full" src="img/timeline.png">
         <p>Netlify is founded</p>
         <img class="small" src="img/netlify.png">
+        <ul>
+          <li>Atomic deploy</li>
+          <li>CI/CD</li>
+        </ul>
       </div>
 
 
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-16"><span>May<br>15</span></div>
         <img class="full" src="img/timeline.png">
         <p>Ionic 1.0 is released</p>
@@ -373,7 +364,7 @@ var bar = 'medim string';
       </div>
 
 
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-17"><span>Sep<br>15</span></div>
         <img class="full" src="img/timeline.png">
         <p>GraphQL public release</p>
@@ -381,7 +372,7 @@ var bar = 'medim string';
       </div>
 
 
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-18"><span>Feb<br>16</span></div>
         <img class="full" src="img/timeline.png">
         <p>Graph.cool is founded</p>
@@ -389,7 +380,7 @@ var bar = 'medim string';
       </div>
 
 
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-19"><span>Apr<br>16</span></div>
         <img class="full" src="img/timeline.png">
         <p>Meteor announces Apollo development</p>
@@ -404,7 +395,7 @@ var bar = 'medim string';
       </div>
 
 
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-20"><span>May<br>16</span></div>
         <img class="full" src="img/timeline.png">
         <p>JAM stack starts</p>
@@ -412,7 +403,7 @@ var bar = 'medim string';
       </div>
 
 
-      <div class="step timeline" data-x="8000" data-y="0">
+      <div class="step timeline" data-x="4000" data-y="0">
         <div class="pin pin-21"><span>Jun<br>16</span></div>
         <img class="full" src="img/timeline.png">
         <p>ES6 is released</p>
@@ -420,37 +411,48 @@ var bar = 'medim string';
       </div>
 
 
-      <div class="step" data-x="10000" data-y="0">
+      <div class="step" data-x="6000" data-y="0">
         <h1>Dashboard</h1>
         <img class="full" src="img/dashboard.png">
       </div>
-
-
-      <div class="step" data-x="12000" data-y="0">
+      <div class="step" data-x="6000" data-y="1000">
         <h1>Electron frame</h1>
         <img class="full" src="img/electronframe.png">
       </div>
-
-
-      <div class="step" data-x="14000" data-y="0">
+      <div class="step" data-x="6000" data-y="2000">
         <h1>Routing morphing</h1>
         <img class="full" src="img/electronsearch.png">
       </div>
 
 
-      <div class="step" data-x="16000" data-y="0">
-        <h1>More?</h1>
+      <div class="step" data-x="8000" data-y="0">
+        <h1>Write less code</h1>
         <ul>
-          <li>iPad app</li>
-          <li>iPhone app</li>
-          <li>Android app</li>
-          <li>Stand alone till</li>
-          <li>Static website manager</li>
+          <li>more manageable</li>
+          <li>predictable</li>
+          <li>less bugs</li>
         </ul>
+      </div>
+      <div class="step" data-x="8000" data-y="1000">
+        <h1>Delegate</h1>
+        <ul>
+          <li>Frameworks</li>
+          <li>Services</li>
+          <li>Packages</li>
+          <li>Practices</li>
+        </ul>
+      </div>
+      <div class="step" data-x="8000" data-y="2000">
+        <h1>Go Serverless</h1>
+        <img src="img/website.png">
+      </div>
+      <div class="step" data-x="8000" data-y="4000">
+        <h1>JS - Learn once, apply everywhere</h1>
+        <img src="img/overall.png">
       </div>
 
 
-      <div class="step" data-x="18000" data-y="0">
+      <div class="step" data-x="10000" data-y="0">
         <h1>Get in more depth</h1>
         <ul>
           <li>JS/ES6 crash course</li>
@@ -478,8 +480,14 @@ var bar = 'medim string';
       </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/impress.js/0.5.3/impress.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/impress.js/0.5.3/impress.min.js">
+    </script>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js">
+    </script>
+
     <script src="index.js"></script>
   </body>
 </html>
